# Acer-Hybrid

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: plugin-provider-example.toml  plugin-workflow-example.toml  policy-pack-example.toml  policy.toml  workflow-example.toml
crates/acer-cli/: Cargo.toml
crates/acer-cli/src/: main.rs  plugins.rs  runtime.rs
crates/acer-cli/src/commands/: ask.rs  benchmark.rs  config.rs  daemon.rs  dashboard.rs  doctor.rs  gateway.rs  init.rs  logs.rs  mod.rs  models.rs  plugins.rs  policy.rs  sandbox.rs  secrets.rs  stats.rs  trace.rs  workflow.rs
crates/acer-core/: Cargo.toml
crates/acer-core/src/: config.rs  error.rs  lib.rs  types.rs  validation.rs
crates/acer-gateway/: Cargo.toml
crates/acer-gateway/src/: handlers.rs  lib.rs  openai_types.rs  server.rs
crates/acer-policy/: Cargo.toml
crates/acer-policy/src/: engine.rs  lib.rs  redaction.rs  rules.rs
crates/acer-provider/: Cargo.toml
crates/acer-provider/src/: http.rs  lib.rs  router.rs  traits.rs
crates/acer-provider/src/providers/: anthropic.rs  custom.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/acer-trace/: Cargo.toml
crates/acer-trace/src/: lib.rs  schema.rs  store.rs
crates/acer-vault/: Cargo.toml
crates/acer-vault/src/: encryption.rs  lib.rs  vault.rs
crates/acerd/: Cargo.toml
crates/acerd/src/: main.rs
docs/: architecture.md
