[package]
name = "acer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true
dirs.workspace = true
sha2.workspace = true
hex.workspace = true
regex.workspace = true
