[package]
name = "acer-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
acer-core.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true