[package]
name = "acer-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
acer-core.workspace = true

sqlx = { workspace = true, features = ["macros"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
