[package]
name = "acer-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
acer-core.workspace = true

ring.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true