[package]
name = "acerd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "acerd"
path = "src/main.rs"

[dependencies]
acer-core.workspace = true
acer-provider.workspace = true
acer-policy.workspace = true
acer-vault.workspace = true
acer-trace.workspace = true
acer-gateway.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
ctrlc = "3.4"